BUGFIX: Improve css styling for logos on smaller devices: - on small screens show only first 3 - improve generic text-align:left

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Molecules/_ImageGrid.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Molecules/_ImageGrid.scss
@@ -17,12 +17,25 @@
   &.distribute-evenly {
     flex-wrap: nowrap;
     justify-content: center;
+    .neos-nodetypes-image {
+      text-align:center;
+    }
 
-    @media(max-width: $layout-max-width) {
+    @include mq('smallerThanLarge') {
       > *:nth-child(n+6) {
         display: none;
       }
     }
+
+    @include mq('small') {
+      > *:nth-child(n+4) {
+        display: none;
+      }
+      .neos-alignment-center {
+        text-align: center;
+      }
+    }
+
 
     img {
       max-height: 30px;
