--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_Stage.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_Stage.scss
@@ -87,8 +87,8 @@
 	padding: 7.5vh $double-spacing+px;
 
 	@include mq('small') {
-		*:not(i) {
-			text-align: left !important;
+		*[style*=center],.u-alignCenter,.neos-alignment-center {
+			text-align: left!important;
 		}
 	}
 
